# Atangria

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
buildGNU/: CMakeCache.txt  Makefile  cmake_install.cmake
buildGNU/examples/: Makefile  cmake_install.cmake
buildGNU/src/ATA/: Makefile  cmake_install.cmake
buildGNU/tests/: Makefile  cmake_install.cmake
buildVS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Atangria.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildVS/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildVS/src/ATA/: INSTALL.vcxproj  INSTALL.vcxproj.filters  atangria.vcxproj  atangria.vcxproj.filters  cmake_install.cmake
buildVS/src/ATA/Release/: atangria.exp  atangria.lib
buildVS/src/ATA/atangria.dir/Release/: atangria.dll.recipe
buildVS/src/ATA/atangria.dir/Release/atangria.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  atangria.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
buildVS/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildVS/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
buildVS/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
buildVS/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
buildVS/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: config.cmake  macros.cmake
cmake/modules/: Findglfw.cmake
examples/: CMakeLists.txt  atangria.icns  atangria.rc  hello_world.cpp
include/ATA/: all.h  base.h  cnc.h  config.h  config.h.in  gfx.h  math.h  mt3.h  types.h  utils.h
include/ATA/config/: compiler.h  compiler.h.in  cpp.h  cpp11_backward_compat.h  debug.h  glfw_3_3.h  opengl.h  platform.h  platform.h.in  windows.h
include/ATA/core/: apidefs.h  application.h  application.inl  base_listener.h  bitmapicon.h  context.h  event.h  log.h  monitor.h  no_copy.h  no_move.h  opengl.h  resource.h  signal.h  signal.inl  string.h  surface.h  utf.h
include/ATA/gfx/: blending.h  color.h  glclientstate.h  glresource.h  mesh.h  triangle.h
include/ATA/gfx/objects/: texture2D.h
include/ATA/math/: ease.h  functions.h  matrix.h  matrix.inl  rect.h  vec.h  vec_impl.inl
include/ATA/run/: cthread.h  lock.h  mutex.h  sleep.h  thread.h  thread.inl  thread_local.h  thread_local_ptr.h  thread_local_ptr.inl
include/ATA/run/impl/: mutex_impl.h  thread_impl.h  thread_local_impl.h
include/ATA/run/posix/: mutex_impl_posix.h  thread_impl_posix.h  thread_local_impl_posix.h
include/ATA/run/win32/: mutex_impl_win32.h  thread_impl_win32.h  thread_local_impl_win32.h
include/ATA/utils/: any.h  file_input_stream.h  input_stream.h  io.h  memory_input_stream.h  timer.h  variant.h
src/ATA/: CMakeLists.txt
src/ATA/core/: application.cpp  bitmapicon.cpp  context.cpp  event.cpp  glresource.cpp  log.cpp  monitor.cpp  string.cpp  surface.cpp
src/ATA/gfx/: glresource.cpp
src/ATA/run/: cthread.c  lock.cpp  mutex.cpp  thread.cpp  thread_impl.cpp  thread_local.cpp
src/ATA/run/posix/: mutex_impl_posix.cpp  sleep_impl_posix.cpp  thread_impl_posix.cpp  thread_local_impl_posix.cpp
src/ATA/run/win32/: mutex_impl_win32.cpp  sleep_impl_win32.cpp  thread_impl_win32.cpp  thread_local_impl_win32.cpp
